--- a/model/uncertainties.tex
+++ b/model/uncertainties.tex
@@ -1,7 +1,5 @@
-\subsection{Measurement Uncertainties}
+\section{Measurement Uncertainties}
 
-
-\subsubsection{Absorptivity}
 
 There are five uncertainties for any absorptivity measurements using the millimeter wavelength system: instrumentation errors and electrical noise ($Err_{inst}$), errors in dielectric matching ($Err_{diel}$), errors in transitivity measurement ($Err_{trans}$), errors due to resonance asymmetry ($Err_{asym}$), and errors in measurement conditions ($Err_{cond}$) resulting from uncertainties in temperature, pressure, and mixing ratio. The term $Err$ is used for representing uncertainties instead of the more frequently used $\sigma$ to avoid confusion between $1\sigma$,$2\sigma$, and $3\sigma$ uncertainties.
 
@@ -146,3 +144,5 @@ Since $Err_{cond}$ is dependent on the opacity model, this uncertainty is mainta
 \begin{equation}
 Err_{tot} = \sqrt{Err_n^2 + Err_{diel}^2 + Err_{trans}^2 + Err_{asym}^2} \;(dB/km).
 \end{equation}
+
+\subsection{Absorptivity}
