--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,6 +1,12 @@
-\section{Introduction}
+\chapter{Introduction}
+
+%\section{Introduction}
 Active and passive microwave remote sensing techniques have been extensively used in the study of our sister planet, Venus. Unlike Earth's atmosphere, the Venus atmosphere is mostly comprised of gaseous carbon dioxide (CO$_2$). CO$_2$ comprises 96.5\% of the atmosphere along with gaseous nitrogen (N$_2$) at about 3.5\%. The Venus atmosphere has multiple trace constituents such as sulfur dioxide (SO$_2$), carbon monoxide (CO), water vapor (H$_2$O), carbonyl sulfide (OCS), and sufuric acid vapor (H$_2$SO$_4$) \cite{Suleiman-thesis}.
 
 Two sulfur-bearing compounds dominate the millimeter-wave emission from Venus: sulfur dioxide (SO$_2$) and gaseous sulfuric acid (H$_2$SO$_4$). At higher pressures H$_2$SO$_4$ thermally dissociates, forming H$_2$O and SO$_2$, both of which exhibit relatively small amounts of microwave absorption at the abundance levels present in the Venus atmosphere. Thus, in the deep atmosphere, only SO$_2$ and CO$_2$ have the potential to affect the observed microwave emission.
 
 Utilizing the millimeter-wavelength system at the Planetary Atmospheres Laboratory at Georgia Institute of Technology it is possible to simulate the upper troposphere of Venus and take precision measurements of the millimeter-wavelength properties of sulfur dioxide. Using the measurements, a model can be created that accurately predicts the opacity of sulfur dioxide in the Venus atmosphere. This model will make it possible to determine the source of variations in the Venus millimeter-wavelength emission, such as were observed by Sagawa \cite{observations}.
+
+\section{Background and Motivation}
+
+\section{Organization}
