--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -104,9 +104,10 @@ would have graduated so, so, very much faster.
 \include{./labwork/labwork}
 %\include{./prelim/prelim}
 \include{./model/model}
+\include{./rtm/rtm}
 \include{./summary/summary}
 
-\nocite{*}
+%\nocite{*}
 %% We need this since this file doesn't ACTUALLY \cite anything...
 %%
 \appendix
