--- a/labwork/labwork.tex
+++ b/labwork/labwork.tex
@@ -107,5 +107,5 @@ Once the gas temperature has stabilized, another set of tests measuring the reso
 
 Once the second vacuum measurements are taken CO$_2$ is then added to the chamber until the resonances are matched to the same frequency of our test gas. Again measurements are taken and this is repeated for every pressure of the test gas. Once this is finished a vacuum is again drawn and another test is taken. 
 
-Lastly the system is set up for a transmissivity test where we measure t (equation \ref{eq:t}) for each given resonant frequency. The system is then set back up and is ready for a new test. Reference table \ref{tab:testmatrix} for the testing matrix being used.
+Lastly the system is set up for a transmissivity test where we measure t (equation \ref{eq:t}) for each given resonant frequency. The system is then set back up and is ready for a new test. %Reference table \ref{tab:testmatrix} for the testing matrix being used.
 
