--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{gatech-thesis}
 \usepackage{amsmath,amssymb,latexsym,float,epsfig,subfigure}
+\numberwithin{equation}{chapter}
+\setcounter{secnumdepth}{2}
 
 %%
 %% This example is adapted from ucthesis.tex, a part of the
