--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,6 +76,29 @@ school = {Georgia Institute of Technology},
 month = "May"
 }
 
+@phdthesis{Fahd-thesis,
+author = "Antoine K. Fahd",
+title = {Study and Interpretation of the Millimeter-wave Spectrum of Venus},
+year = "1992",
+school = {Georgia Institute of Technology},
+month = "June"
+}
+@phdthesis{Kolodner-thesis,
+author = "Marc lan Kolodner",
+title = {Microwave Remote Sensing of Sulfuric Acid Vaport in the Venus Atmopshere},
+year = "1997",
+school = {Georgia Institute of Technology},
+month = "June"
+}
+
+@phdthesis{Hanley-thesis,
+author = "Thomas Hanley",
+title = {The Microwave Opacity Effects of Ammonia and Water Vapor Application to Remote Sensing of the Atmosphere of Jupiter},
+year = "2008",
+school = {Georgia Institute of Technology},
+month = "August"
+}
+
 
 @article{linecatelog,
 title = {Introduction to submillimeter, millimeter and microwave spectral line catalog },
@@ -93,6 +116,21 @@ keywords = "Spectroscopy",
 keywords = "Absorption",
 keywords = "Spectral lines "
 }
+
+@article{Jenkins-RTM,
+title = "Microwave Remote Sensing of the Temperature and Distribution of Sulfur Compounds in the Lower Atmosphere of Venus ",
+journal = "Icarus ",
+volume = "158",
+number = "2",
+pages = "312 - 328",
+year = "2002",
+note = "",
+issn = "0019-1035",
+doi = "http://dx.doi.org/10.1006/icar.2002.6894",
+url = "http://www.sciencedirect.com/science/article/pii/S0019103502968946",
+author = "Jon M. Jenkins and Marc A. Kolodner and Bryan J. Butler and Shady H. Suleiman and Paul G. Steffes"
+}
+
 
 @article {high-sensitivity,
 author = {Hanley, Thomas R. and Steffes, Paul G.},
