--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -1,6 +1,8 @@
 \documentclass[12pt]{gatech-thesis}
 \usepackage{amsmath,amssymb,latexsym,float,epsfig,subfigure}
 \numberwithin{equation}{chapter}
+\numberwithin{figure}{chapter}
+
 \setcounter{secnumdepth}{2}
 
 %%
