--- a/labwork/labwork.tex
+++ b/labwork/labwork.tex
@@ -109,3 +109,4 @@ Once the second vacuum measurements are taken CO$_2$ is then added to the chambe
 
 Lastly the system is set up for a transmissivity test where we measure t (equation \ref{eq:t}) for each given resonant frequency. The system is then set back up and is ready for a new test. %Reference table \ref{tab:testmatrix} for the testing matrix being used.
 
+\input{./labwork/results}
