--- a/rtm/rtm.tex
+++ b/rtm/rtm.tex
@@ -85,6 +85,8 @@ W_i = (1-e^{\tau,i}) e^{-\tau_{i+1,N}}
 \input{./rtm/vector-rtm}
 
 \input{./rtm/beam-forming}
+\input{./rtm/results}
+
 %RTM Theory and shit
 
 %For transfer over a path length $s$ with a surface impact angle $\theta$ the radiative transfer at the top of the atmosphere can then be written as 
