--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -1,10 +1,19 @@
 \chapter{Summary and Conclusions}
 With the upcoming end of Venus Express, earth-based centimeter and millimeter-wavelength observations of Venus are becoming more important. Knowledge of the absorption properties of sulfur dioxide will be important in analyzing data from these earth-based observations. Discussions of the model, remote sensing application, the use of the radiative transfer model, and suggestions for future work are presented below.
 \section{Significant Results}
-No data of SO$_2$'s millimeter-wavelength opacity has been previously taken, and thus, these reults are a significant increase in the understanding of the true absorption properties of SO$_2$.
+No data of SO$_2$'s millimeter-wavelength opacity has been previously taken, and thus, these results are a significant increase in the understanding of the true absorption properties of SO$_2$.
 
-The data taken for the millimeter-wavelength absorption of sulfur dioxide is able to verify formalism for sulfur dioxide opacity developed by Fahd and Steffes (1992) \cite{Fahd-1992} was accurate for both centimeter and millimeter-wavelengths. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. 2014 \cite{Steffes-2014}) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. The results of the model from input parameters greater then these absolute bounds are not guaranteed.
+The data taken for the millimeter-wavelength absorption of sulfur dioxide is able to verify formalism for sulfur dioxide opacity developed by Fahd and Steffes (1991) \cite{Fahd-1991} was accurate for both centimeter and millimeter-wavelengths. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. 2014 \cite{Steffes-2014}) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. The results of the model from input parameters greater then these absolute bounds are not guaranteed.
 \section{Application to Venus Observations}
-\section{Radiative Transfer Model}
+Verifying that the Fahd and Steffes (1991) \cite{Fahd-1991} model correctly predicted the absorption of SO$_2$ at centimeter and millimeter-wavelengths allows for analysis of earth-based observations from radio telescopes. Verifying a model also allows for the development of a Radiative Transfer Model (RTM) which can successfully simulate and predict the expected readings from observations. 
+
+One such radio telescope is Combined Array for Research in Millimeter-wave Astronomy (CARMA). Observations of Venus using CARMA have been recently completed by Devaraj \cite{Devaraj-CARMA} at frequencies ranging from 98 - 115 GHz. Using these maps, along with the RTM developed, maps of the variations observed can be produced. These maps can be used to identify anomalies in Venus's atmosphere such as storms or potential volcanic eruptions.
+
+Along with CARMA, other observations of Venus have been made. One such observation was done by Sagawa (2008) \cite{Sagawa-2008}. Sagawa mentions it is possible to extract abundance profiles for both SO$_2$ and H$_2$SO$_4$ from observations done at two different frequencies. The requirement for this is that the frequency dependence of the gas's absorption is well understood. While this work characterizes the absorption of SO$_2$, work is still needed to characterize H$_2$SO$_4$'s absorption spectrum in the millimeter-wavelength regime. 
+
+Sub-millimeter-wavelength observations where done with ALMA (Atacama Large Millimeter Array) in 2011. These observations were the first high-resolution mapping of the day hemisphere at mm-wavelengths. They showed how the mesopshere was affected by solar-winds, it's water distribution, and moderate equatorial zonal winds. Using this data along with the developed RTM it is possible to retrieve an abundance profile for multiple constituents of Venus's atmosphere.
+
 \section{Suggestions for Future Work}
-Venus RTM
+Many improvements can be made to the developed RTM. The biggest underlying issue is the formalism for the absorption of H$_2$SO$_4$. The formalism used was developed from centimeter-wavelength data. When extrapolated to millimeter-wavelengths, the best fit model over-estimates the absorption of H$_2$SO$_4$. A new system to better characterize H$_2$SO$_4$'s millimeter-wavelength absorption spectrum is being developed at Georgia Tech's Planetary Atmospheres Lab. These measurements, along with Kolodner et al. (1998) \cite{Kolodner-1998} should help develop a formalism for H$_2$SO$_4$ absorption spectra at centimeter and millimeter-wavelengths. 
+
+The development of a Radiative Transfer Model is the first step in creating an inverse model of the Venus atmosphere. Creation of such model will allow for abundance profiles and temperature-pressure profiles to be extracted from observations of the planet. While retrieval algorithms have been developed for H$_2$SO$_4$ and temperature at centimeter wavelengths (Jenkins et al. 2002 \cite{Jenkins-2002}) these cannot be extrapolated to the millimeter-wavelength due to assumptions made of SO$_2$'s frequency dependence. Thus methods of retrieval need to be developed.
