--- a/model/model.tex
+++ b/model/model.tex
@@ -6,7 +6,7 @@ Before creating a new formalism for the absorption of SO$_2$ in a CO$_2$ atmosph
 
 \section{Model Analysis Process}
 
-The models used in this comparison are the VVW and the Ben-Reuven model as calculated by Sulieman et al. 1997 \cite{Sulieman-thesis}. The comparison of these models are done using a L$_2$ norm analysis. 
+The models used in this comparison are the VVW and the Ben-Reuven model as calculated by Suleiman et al. 1997 \cite{Suleiman-1996}. The comparison of these models are done using a L$_2$ norm analysis. 
 
 The following identity function was used to calculate the number of data points that each model encompassed,
 \begin{equation}
@@ -40,7 +40,7 @@ where $Per_{model}$ is the percentage of data points that the model fits and $N$
 \end{sidewaystable} 
 
 \section{Suggested Model}
-Results indicate that the models for the centimeter- and millimeter-wavelength opacity from SO$_2$ in a CO$_2$ atmosphere by Suleiman et al. (1996) and Fahd and Steffes (1992) are both valid over the entire centimeter-and millimeter-wavelength range under simulated conditions for the deep atmosphere of Venus. The suggested model is the Fahd and Steffes (1992) \cite{Fahd-thesis} model . This model employs the Van Vleck-Weisskopf lineshape, and was developed from measurements of SO$_2$/CO$_2$ mixtures conducted at room temperature. As per their paper, we employ only the rotational line catalog to compute opacity. (JPL spectral line catalog, Pickett et al., 1998) \cite{JPL_linecat}. While both models perform well, the Fahd and Steffes (1992) model appears to provide a slightly better fit to the overall data set. 
+Results indicate that the models for the centimeter- and millimeter-wavelength opacity from SO$_2$ in a CO$_2$ atmosphere by Suleiman et al. (1996) and Fahd and Steffes (1992) are both valid over the entire centimeter-and millimeter-wavelength range under simulated conditions for the deep atmosphere of Venus. The suggested model is the Fahd and Steffes (1992) \cite{Fahd-thesis} model . This model employs the Van Vleck-Weisskopf lineshape, and was developed from measurements of SO$_2$/CO$_2$ mixtures conducted at room temperature. As per their paper, we employ only the rotational line catalog to compute opacity. (JPL spectral line catalog, Pickett et al., 1998) \cite{Pickett-1998}. While both models perform well, the Fahd and Steffes (1992) model appears to provide a slightly better fit to the overall data set. 
 
 It should also be noted that because both models were derived from measurements conducted at pressures of 6 Bars or less, no allowance for the compressibility of CO$_2$ is included in these models. When preforming the best-fit analysis a correction factor for compressibility was computed and entered into the models (imply dividing the measured partial pressure of CO$_2$ by the compressibility, Z). 
 
