--- a/rtm/results.tex
+++ b/rtm/results.tex
@@ -14,8 +14,8 @@ Frequency & Wavelength & Measured $T_D$ & Computed $T_D$ & Reference\\
 \hline
 1.385 	& 21.66	 	&$612.8 \pm 12.3$	&642.6  &Butler et al., 2001 			\cite{Butler-2001}\\
 1.42 	& 21.12 	&$617 	\pm 25$		&642.7  &Berge et al., 1972 			\cite{Berge-1972}\\
-1.5 	& 20.00 	&$636 	\pm 28$		&643.1  &Pettengil et al., 1988 		\cite{Pettengil-1988}\\
-2.91 	& 10.31 	&$620 	\pm 30$		&651.4  &Vetukhnovskaya et al., 1969 	\cite{Vetukhnovskaya-1969}\\
+1.5 	& 20.00 	&$636 	\pm 28$		&643.1  &Pettengill et al., 1988 		\cite{Pettengill-1988}\\
+2.91 	& 10.31 	&$620 	\pm 30$		&651.4  &Vetukhnovkaya et al., 1969 	\cite{Vetukhnovkaya-1969}\\
 4.86 	& 6.41	 	&$679.9 \pm 13.6$	&654.1  &Butler et al., 2001 			\cite{Butler-2001}\\
 5.0 	& 6.0 		&$652 	\pm 30$		&653.7  &Berge et al., 1972 			\cite{Berge-1972}\\
 8.42 	& 3.56	 	&$652 	\pm 15$		&621.3  &Steffes et al., 1990 			\cite{Steffes-1990}\\
@@ -29,7 +29,7 @@ Frequency & Wavelength & Measured $T_D$ & Computed $T_D$ & Reference\\
 22.25 	& 1.35	 	&$507 	\pm 22$		&485.0  &Steffes et al., 1990			\cite{Steffes-1990}\\
 22.46 	& 1.34	 	&$505.2 \pm 25.3$	&483.7  &Butler et al., 2001 			\cite{Butler-2001}\\
 22.46 	& 1.34	 	&$499.1 \pm 25$		&483.7  &Suleiman et al., 1997 			\cite{Suleiman-thesis}\\
-37.50 	& 0.80	 	&$440 	\pm 35$		&421.6  &Vetukhnovskaya et al., 1969 	\cite{Vetukhnovskaya-1969}\\
+37.50 	& 0.80	 	&$440 	\pm 35$		&421.6  &Vetukhnovkaya et al., 1969 	\cite{Vetukhnovkaya-1969}\\
 86.1 	& 0.35	 	&$357.5	\pm 13.1$	&345.7  &Ulich et al., 1980 			\cite{Ulich-1980}\\
 \hline
 \end{tabular}
@@ -39,6 +39,6 @@ Frequency & Wavelength & Measured $T_D$ & Computed $T_D$ & Reference\\
 \begin{figure}[p]
     \centering
 	\includegraphics[width=0.7\textwidth]{./rtm/plots/weight.eps}
-	\caption{Disk-averaged weighting funciton of the Venus atmosphere at frequencies of 8.42, 14.94, 22.46, and 86.1 GHz. }
+	\caption{Disk-averaged weighting function of the Venus atmosphere at frequencies of 8.42, 14.94, 22.46, and 86.1 GHz. }
 		\label{fig:weight}
 \end{figure}
